--- a/demo_s11/demo_jstl_c06/build.gradle
+++ b/demo_s11/demo_jstl_c06/build.gradle
@@ -18,6 +18,10 @@ dependencies {
 // https://mvnrepository.com/artifact/javax.servlet/jstl
     implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
 
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation 'mysql:mysql-connector-java:8.0.28'
+
+
 }
 compileJava.options.encoding = 'UTF-8'
 tasks.withType(JavaCompile) {
